No warnings on JDK 11