@@ -12,11 +12,12 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
+    <maven.compiler.source>1.11</maven.compiler.source>
+    <maven.compiler.target>1.11</maven.compiler.target>
 
     <protobuf.version>3.7.1</protobuf.version>
     <protoc-jar-maven-plugin.version>3.7.1</protoc-jar-maven-plugin.version>
+    <maven-surefire-plugin.version>3.0.0-M3</maven-surefire-plugin.version>
     <junit.version>4.12</junit.version>
     <immutables.version>2.7.5</immutables.version>
     <vavr.version>0.10.0</vavr.version>
@@ -46,6 +47,17 @@
         <version>3.8.0</version>
         <configuration>
           <release>11</release>
+        </configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>${maven-surefire-plugin.version}</version>
+        <configuration>
+          <forkCount>1</forkCount>
+          <!-- Workaround for Guice reflective access in JDK 11 - https://github.com/google/guice/issues/1133 -->
+          <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
         </configuration>
       </plugin>
 
